# DesafioHashKRA

./: CMakeLists.txt  DesafioHashKRA.7z  README.md  a.out  app.c  arbol_binario.c  arreglo_binario.c  arreglo_interpolacion.c  busqueda_hash.c  tabla_hash.c  tabla_hash_mod.c  temporal.c
headers/: arbol_binario.c  arbol_binario.h  arreglo_binario.c  arreglo_binario.h  arreglo_interpolacion.c  arreglo_interpolacion.h  busqueda_hash.h  tabla_hash.c  tabla_hash.h  tabla_hash_mod.c  tabla_hash_mod.h
old/: tabla_hash global.h
